Refactor user flow and update documentation for classroom icebreaker app
- Renamed 'students' to 'users' and 'teacher' to 'host' for broader applicability.
- Updated Phase 1 to use a request/accept system for group formation (2-4 members).
- Changed question format to "Would you rather?" A/B questions.
- Enhanced user experience with emoji avatars and self-paced group discussions.
- Revised documentation in CLAUDE.md and README.md to reflect new terminology and features.
- Added deployment scripts in package.json for easier production deployment.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clear-db": "npx convex run dev:clearAllData"
+    "clear-db": "npx convex run dev:clearAllData",
+    "deploy:convex": "npx convex deploy --yes",
+    "deploy:prod": "npm run deploy:convex && npm run build"
   },
   "dependencies": {
     "@xstate/react": "^4.1.0",
